sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:4: error: not found: value getNombresValeurs
  for (j <-0 to getNombresValeurs)
                ^