sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var echangefait:Boolean = true
  for (j <-0 to getNombresValeurs)
  do {
    echangefait= false
    for (i <- j to getNombreValeurs()-2-j) {
      if (plusPetit(i+1, i)){
        echange(i, i+1)
        echangefait=true    
      }
    }
    for (i <- j to getNombreValeurs()-2-j) {
      if (plusPetit(getNombreValeurs()-1-i, getNombreValeurs()-2-i)){
        echange(getNombreValeurs()-2-i, getNombreValeurs()-1-i)
        echangefait=true
      }
  	}	
  } while (echangefait)
}